﻿CHANGELOG 2.5 mod_clm_ext ab 1.0.0
------------

Legend:
* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
% -> Performance Fix
- -> Removed
! -> Note

- - - - - 3.2.4 - [16-07-2017] - - - - - - - - - - - - - - - - - - - -
^ idna_convert Anpassung an PHP7

- - - - - 3.2.3 - [18-04-2015] - - - - - - - - - - - - - - - - - - - -
! Vermeidung gleicher Versionsnummern in verschiedenen CLM Versionen

- - - - - 1.2.3 - [09-09-2014] - - - - - - - - - - - - - - - - - - - -
# idna_convert von Net_IDNA_php4 abgetrennt

- - - - - 1.2.2 - [06-08-2014] - - - - - - - - - - - - - - - - - - - -
# Code-Bereinigung

- - - - - 1.2.1 - [30-06-2014] - - - - - - - - - - - - - - - - - - - -
# Joomla 3.x Support

- - - - - 1.2.0 - [26-03-2014] - - - - - - - - - - - - - - - - - - - -
+ Erweiterung zum Hervorheben (Schlagworte, Farben, Schriften)
 
- - - - - 1.1.5 - [18-02-2014] - - - - - - - - - - - - - - - - - - - -
+ Weitere Farben zum Hervorheben von Mannschaften/Vereinen

- - - - - 1.1.4 - [xx-xx-2013] - - - - - - - - - - - - - - - - - - - -
# Code-Bereinigung

- - - - - 1.1.3 - [06-11-2012] - - - - - - - - - - - - - - - - - - - -
+ Hervorheben von Mannschaften/Vereinen

- - - - - 1.1.2 - [18-10-2012] - - - - - - - - - - - - - - - - - - - -
+ Einbau dieser changelog
^ Anpassung wegen Suchmaschinenfreundliche URLs JA auf gerufener Seite
