@@ -11,6 +11,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+- - - - - 3.4.0 - [26-11-2018] - - - - - - - - - - - - - - - - - - - -
+^ GET-Parameter url ersetzt durch Module-Parameter
+
 - - - - - 3.2.4 - [16-07-2017] - - - - - - - - - - - - - - - - - - - -
 ^ idna_convert Anpassung an PHP7
 
